--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
+    <uses-permission android:name="com.arshad.map.permission.MAPS_RECEIVE"/>
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true"/>
@@ -42,6 +43,10 @@
             android:enabled="true"
             android:exported="false">
         </provider>
+
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="@string/google_maps_key"/>
     </application>
 
 </manifest>
